# mm_proc_macro_workshop

./: .gitignore
builder/: Cargo.toml
builder/builder/: Cargo.toml
builder/src/: lib.rs  main.rs
builder/tests/: 02-create-builder.rs  progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: progress.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: 04a-paste-ident.rs  05a-repeat-section.rs  progress.rs
