[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "builder"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "*", features = ["full","extra-traits"] }
